--- a/par-alg-rep/inputs/macros.sty
+++ b/par-alg-rep/inputs/macros.sty
@@ -74,6 +74,8 @@
 \newcommand{\sansS}{\ensuremath{\mathsf{S}}}
 \newcommand{\sansT}{\ensuremath{\mathsf{T}}}
 \newcommand{\bA}{\ensuremath{\mathbf{A}}}
+\newcommand{\bL}{\ensuremath{\mathbf{L}}}
+\newcommand{\sL}{\ensuremath{\mathcal{L}}}
 \newcommand{\bQ}{\ensuremath{\mathbf{Q}}}
 \newcommand{\bT}{\ensuremath{\mathbf{T}}}
 \newcommand{\ba}{\ensuremath{\mathbf{a}}}
