additions to par-alg-rep

--- a/par-alg-rep/inputs/macros.sty
+++ b/par-alg-rep/inputs/macros.sty
@@ -51,8 +51,8 @@
 \newcommand{\Poly}{\ensuremath{\operatorname{Poly}}}
 \newcommand{\V}{\ensuremath{\operatorname{V}}}
 \newcommand{\sdp}{\ensuremath{\leq_{\mathrm{sd}}}}
-%\newcommand{\defn}[1]{{\bf #1}}
-\newcommand{\defn}[1]{\textit{#1}}
+\newcommand{\defn}[1]{\textbf{\emph{#1}}}
+%% \newcommand{\defn}[1]{\textit{#1}}
 \newcommand{\N}{\ensuremath{\mathbb{N}}}
 \newcommand{\SDwedge}{\ensuremath{\mbox{SD}_\wedge}}
 \newcommand{\<}{\ensuremath{\langle}}
@@ -62,6 +62,7 @@
 \newcommand{\sansA}{\ensuremath{\mathsf{A}}}
 \newcommand{\sansComp}{\ensuremath{\mathsf{comp}}}
 \newcommand{\sansC}{\ensuremath{\mathsf{C}}}
+\newcommand{\sansc}{\ensuremath{\mathsf{c}}}
 \newcommand{\sansH}{\ensuremath{\mathsf{H}}}
 \newcommand{\sansO}{\ensuremath{\mathsf{O}}} % ALL FINITARY OPERATIONS
 \newcommand{\sansP}{\ensuremath{\mathsf{P}}}
