--- a/par-alg-rep/par-alg-rep.tex
+++ b/par-alg-rep/par-alg-rep.tex
@@ -10,6 +10,12 @@
 %% then delete the existing refs.bib file so it will be automatically generated 
 %% again with your new entry the next time you run pdfaltex.
 \begin{filecontents*}{inputs/refs.bib}
+@misc{Lampe:20161017,
+  author        = "Bill Lampe",
+  howpublished  = "personal communication",
+  note          = "October 17",
+  year          = "2016"
+}
 @article {MR552159,
     AUTHOR = {Pudl{\'a}k, Pavel and T{\.u}ma, Ji{\v{r}}{\'{\i}}},
      TITLE = {Every finite lattice can be embedded in a finite partition
@@ -166,12 +172,12 @@ of a Finite Partial Algebra}
 \section{Introduction}
 \label{sec:introduction}
 This note begins with a proof in Section~\ref{sec:simple-proof-well} of the
-result stated in the title. Bill Lampe pointed out that this result has been
+result stated in the title. Bill Lampe~\cite{Lampe:20161017} pointed out that this result has been
 known for a long time and subsequently explained to DeMeo a more general
 viewpoint.  In Section~\ref{sec:more-gener-appr}
-we try to describe what Lampe explained, but 
-surely our presentation is imperfect.  Hopefully it will elicit comments and
-criticisms that we will use to improve it.
+we give some background about closure operators and then
+reiterate what Lampe explained. The presentation is imperfect, but
+hopefully it will elicit comments and criticisms that we can use to improve it.
 
 \section{A well known result}
 \label{sec:simple-proof-well}
@@ -231,7 +237,7 @@ $\mathbb X = \< X, F\>$ with $\Con(\mathbb X) =  L$.
 \section{Generalities}
 \label{sec:more-gener-appr}
 
-
+\subsection{Closure systems, closure operators, and Moore families}
 First we recall some standard definitions.
 %% \footnote{See J. B. Nation's notes~\cite{Nation-notes} for more details.}
 A \defn{closure system} on a set $X$ is a collection $\sC$
@@ -244,7 +250,7 @@ Since every complete meet semilattice is automatically a complete lattice
 the closed sets of a closure system form a complete lattice. 
 %% The sets in $\sC$ are called \defn{closed sets}. 
 
-For us, the key examples of closure systems are the
+Examples of closure systems that are especially relevant for our work are the following:
 \begin{itemize}
 \item order ideals of an ordered set
 \item subalgebras of an algebra 
@@ -252,21 +258,19 @@ For us, the key examples of closure systems are the
 \item congruence relations of an algebra
 \end{itemize}
 
-\newcommand{\cl}{\ensuremath{\operatorname{c}}}
+\newcommand{\cl}{\ensuremath{\operatorname{\sansC}}}
 
 Let $\bP = \<P, \leq \>$ be a poset.
 An function $\cl \colon P \to P$ is called a \defn{closure operator} on $\bP$
 if it satisfies the following axioms for all $x, y\in P$.
 \begin{enumerate}
 \item $x \leq \cl x$ (extensivity) 
-\item $x \leq y$ implies $\cl(x) \leq \cl(y)$ (monotonicity) 
+\item $x \leq y$ implies $\cl x \leq \cl y$ (monotonicity) 
 \item $\cl \cl x = \cl x$ (idempotence) 
 \end{enumerate}
-More concisely, a closure operator is an extensive idempotent poset endomorphism,
+Thus, a closure operator is an extensive idempotent poset endomorphism,
 and the definition above is equivalent to the single axiom
-\[
-(\forall\, x, y \in P) (x \leq \cl y \; \longleftrightarrow  \; \cl x \leq  \cl y)
-\]
+$(\forall\, x, y \in P) (x \leq \cl y \, \longleftrightarrow  \, \cl x \leq  \cl y)$.
 
 \begin{example}
 Let $X$ be a set and let $Y \subseteq X$.
@@ -274,6 +278,83 @@ Define $\cl_Y\colon \sP(X) \to \sP(X)$ by $\cl_Y (W) = W \cup Y$.
 Then $\cl_Y$ is a closure operator on $\<\sP(X), \subseteq\>$.
 \end{example}
 
+
+A \defn{fixpoint} of a
+function $\cl : P \to P$ is an $x\in P$ satisfying $\cl x = x$.
+A fixpoint of a closure operator is called \defn{closed}.
+%% A \defn{closure operator} on a set $X$ is a map $\sansc  \colon \sP(X) \to \sP(X)$ 
+%% satisfying, for all $A, B \in \sP(X)$,
+%% \begin{enumerate}[(a)]
+%% \item $A \subseteq \sansC A$ (extensivity) 
+%% \item $A \subseteq B$ implies $\sansC A \subseteq \sansC B$ (monotonicity) 
+%% \item $\sansC  \sansC A = \sansC A$ (idempotence) 
+%% \end{enumerate}
+%% A fixpoint of a closure operator is called a \defn{closed set}.
+If the poset $\bP = \<P, \leq\>$ happens to be a complete lattice,
+then by extensivity the largest element $\top = \Join P$ is
+a fixpoint of every closure operator on $\bP$.
+Also, the collection of fixpoints of a closure operator is closed under arbitrary meets.
+(Proof: If $\sA$ is a set of fixpoints of $\cl$ and  
+$a \in \sA$, then $\Meet \sA \leq a$, so by monotonicity
+$\cl \bigl( \Meet \sA \bigr) \leq \cl a = a$. 
+Since $a$ was arbitrary,
+$\cl \bigl( \Meet \sA \bigr) \leq  \Meet \sA$.
+By extensivity,
+$\Meet \sA \leq \cl \bigl( \Meet \sA\bigr)$. % \subseteq \bigcap \sA$,
+Therefore, $\cl \bigl( \Meet \sA \bigr) =  \Meet \sA$.)
+%% ; that is,  $\Meet \sA$ is a fixpoint of $\cl$.)
+The set of closure operators on $\bP$ themselves form a complete lattice under the pointwise
+order: $\cl_1 \leq  \cl_2$ iff $\cl_1 x \leq  \cl_2 x$ for all $x \in P$. 
+
+Some of these observations can be restated as follows:
+if $\bP = \<P, \leq\>$ is a complete lattice,
+then the set $\sC \subseteq P$ of fixedpoints of a closure operator
+is a \defn{Moore family} on $\bP$---that is, 
+%% A subset $\sM \subseteq P$ is called a \defn{Moore family} if
+$\Join P \in \sC$ and every nonempty subset of $\sC$ is closed under arbitrary meets.
+%% If $\bL = \<L, \join, \meet\>$ is a complete lattice with top $\top = \Join L$, then
+%% That is, if $\emptyset \neq S \subseteq \sM$, then $\Meet S \in S$.
+%% If $\bL = \<L, \join, \meet\>$ is a complete lattice, then a
+
+
+Conversely, if we are given a Moore family $\sC$ on $\bP$, and if we define 
+$\cl \colon P \to P$ by
+\[
+\cl a = \Meet \{b \in \sC \mid a\leq b\},
+\]
+then $\cl$ satisfies conditions (1)--(3)
+above, making it a closure operator.
+To summarize, $\sC \subseteq P$ is the set of fixpoints (i.e., closed elements)
+of a closure operator on
+$\bP$ if and only if $\sC$ is a Moore family on $\bP$.
+
+Every Moore family on $\bP$ is itself the universe of a complete lattice with the order inherited
+from $\bP$, though the join may differ from the join of $\bP$.
+
+\subsubsection{More Moore families}
+The name ``closure system'' is typically reserved for the special case
+in which $\bP$ happens to be the powerset Boolean
+algebra of a set $X$---that is, $\bP = \<\sP(X), \subseteq\>$; in that case, a Moore family on $\bP$ 
+is called a closure system on $X$. 
+
+
+\begin{example}
+  Let $X$ be a set, let $\Eq(X)$ denote the lattice of equivalence relations on $X$, and let
+  $\sansO(X) = \bigcup_{n< \omega} X^{X^n}$ be the set of all operations on $X$.
+  Define $F : \sP(\Eq(X)) \to \sP(\sansO(X))$
+  and $G :\sP(\sansO(X)) \to \sP(\Eq(X))$ as follows:
+  if $A \subseteq\Eq(X)$ and $B \subseteq \sansO(X)$, then
+  %% \sF_n(S) = \{f \in \sansO(X)X^{X^n} \mid f \text{ is compatible with every $s\in S$}\}
+  %% \[  \sF(S) = \bigcup \sF_n(S)  \]
+  \[
+  F(A) = \{f \in \sansO(X) \mid f \text{ is compatible with every relation in $A$}\}
+  \]
+  and
+  \[
+  G(B) = \{\alpha \in \Eq(X) \mid \alpha \text{ is compatible with every operation in $B$}\}
+  \]
+  Then $G \circ F$ is a closure operator.
+\end{example}
 \newcommand{\Luv}{\ensuremath{L_{u,v}}}
 \newcommand{\bLuv}{\ensuremath{\mathbf{L}_{u,v}}}
 \newcommand{\juv}{\ensuremath{\vee_{u,v}}}
@@ -281,9 +362,7 @@ Then $\cl_Y$ is a closure operator on $\<\sP(X), \subseteq\>$.
 \begin{example}[Pudl{\'a}k-T{\.u}ma~\cite{MR552159}]
   Let $\bL = \<L, \join, \meet\>$ be a lattice, $u, v \in L$, and $u\leq v$.
   Define a subset $\Luv$ of $L$ by
-  \[
-  \Luv =\{x\in L \mid v\leq x \text{ or } u \nleq x\}.
-  \]
+  $\Luv =\{x\in L \mid v\leq x \text{ or } u \nleq x\}$.
   The partial order relation of the lattice $\bL$ induces a lattice order on
   $\Luv$. Denote the resulting lattice by $\bLuv$.
   Then the meet of $\bLuv$ is that of $\bL$, whereas the join of $\bLuv$ is
@@ -304,13 +383,12 @@ Then $\cl_Y$ is a closure operator on $\<\sP(X), \subseteq\>$.
   \]
   Then $\suv$ is a surjective join-homomorphism. In fact, every
   join-homomorphism $\phi \colon L \to K$ satisfying $\phi(u) = \phi(v)$ splits as
-  $\phi =  \psi \circ \suv$ for some $\psi \colon \Luv \to K$, as indicated
-  in the commutative diagram below.
+  $\phi =  \psi \circ \suv$ for some $\psi \colon \Luv \to K$.
+  (See the commutative diagram in Figure~\ref{fig:splitting}.)
 
-  \medskip
-
-  \noindent {\bf Questions:} Is $\suv$ a closure operator? On what set?  Is
-  $\Luv$ the subset of fixpoints of $\suv$?
+  As a mapping from $\bL$ to itself, $\suv$ does not preserve joins. However,
+  $\suv \colon L \to L$ is a closure operator and 
+  $\Luv$ is the set of fixpoints of $\suv$ (the closed sets).
 
   \begin{center}
     \begin{figure}
@@ -324,72 +402,36 @@ Then $\cl_Y$ is a closure operator on $\<\sP(X), \subseteq\>$.
         \draw[->,dashed,thick] (10) -- (21)  node[pos=.5,right] {$\exists \,\psi$};
       \end{tikzpicture}
       \caption{Every join-homomorphism collapsing $u$ and $v$ is divisible by $\suv$.}
-      \label{tab:splitting}
+      \label{fig:splitting}
     \end{figure}
   \end{center}
 
   
 \end{example}
 
-A fixpoint of a closure operator $c$ (i.e., an element $x\in P$ satisfying
-$c x = x$) is called a \defn{closed element}.
-A closure operator on a partially ordered
-set is determined by its closed elements. If $x$ is closed, then
-$y \leq x$ iff $c y \leq x$.
 
-%% A \defn{closure operator} on a set $X$ is a map $\sansC  \colon \sP(X) \to \sP(X)$ 
-%% satisfying, for all $A, B \in \sP(X)$,
-%% \begin{enumerate}[(a)]
-%% \item $A \subseteq \sansC A$ (extensivity) 
-%% \item $A \subseteq B$ implies $\sansC A \subseteq \sansC B$ (monotonicity) 
-%% \item $\sansC  \sansC A = \sansC A$ (idempotence) 
-%% \end{enumerate}
-%% A fixpoint of a closure operator is called a \defn{closed set}.
-The collection of fixpoints of a closure operator is closed
-under arbitrary intersection, hence forms a closure system.
-Indeed, let $\sA$ be a collection of fixpoints of $\sansC$. 
-For each $A \in \sA$ we have $\bigcap \sA \subseteq A$, so
-$\sansC(\bigcap \sA) \subseteq A$ by monotonicity.
-% Therefore, $\bigcap \sA \subseteq \sansC(\bigcap \sA) \subseteq A$ for each $A \in \sA$.  
-Therefore, 
-$\bigcap \sA \subseteq \sansC(\bigcap \sA) \subseteq \bigcap \sA$, so
- $\sansC (\bigcap \sA) =  \bigcap \sA$; that is,  $\bigcap \sA$ is a fixpoint of $\sansC$. 
-
-Thus, if $\sC$ is the collection of closed sets of
-the closure operator $\sansC$, then $\sC$ is a closure system. Conversely, given
-a closure system $\sC$ on a set $X$, define the operator
-$\sansC \colon \sP(X) \to \sP(X)$ as follows
+\subsection{Algebraicity}
+A subset $D$ of an ordered set $P$ is called \defn{up-directed}
+if for every $x, y \in D$ there exists $z \in D$ such that
+$x \leq z$ and $y \leq z$. 
+A closure operator $\cl: \sP(X) \to \sP(X)$ is called \defn{algebraic} provided,
+for all $A\subseteq X$, 
 \[
-\sansC A = \bigcap \{B \in \sC \mid A\subseteq B\}.
+\cl A = \bigcup \{\cl F \mid F \subseteq A \text{ and } F \text{ finite } \}.
 \]
-It is obvious that $\sansC$ so defined satisfies conditions (a)--(c)
-above, making it a closure operator.
-
-
-A closure operator $\sansC$ is called \defn{algebraic} iff
-\[
-\sansC A = \bigcup \{\sansC F \mid F \subseteq A \text{ and } F \text{ finite } \}.
-\]
-
-
-Let $\bL = \<L, \join, \meet\>$ be a complete lattice and let $\top = \Join L$.
-A subset $M \subseteq L$ is called a \defn{Moore family} on
-$\bL$ if $\top\in M$ and every nonempty subset of $M$ is closed under meet.
-That is, if $\emptyset \neq S \subseteq M$, then $\Meet S \in S$.
-
-If $\bL = \<L, \join, \meet\>$ is a complete lattice, then a subset
-$C \subseteq L$ is the set of closed elements for some closure operator on
-$L$ if and only if $C$ is a \defn{Moore family} on $L$.
-Any such set $C$ is itself the universe of a complete lattice $\bC$
-with the order inherited from $\bL$.  However, it is important to note that
-join of $\bC$ might differ from that of $\bL$.
-When $\sL$ is the powerset Boolean algebra of
-$X$---that is, when $\sL = \<\sP(X), \subseteq\>$---then a Moore family in $\sL$ 
-is called a \defn{closure system} on $X$. 
-
-The closure operators on $\sL$ form themselves a complete lattice; the order on
-closure operators is defined by $\cl_1 \leq  \cl_2$ iff
-$\cl_1 x \leq  \cl_2 x$ for all $x \in L$. 
+The collection $\sC$ of closed sets of an algebraic closure operator is called an
+\defn{algebraic closure system}.
+\begin{theorem}[cf.~\cite{Nation-notes} Thm 3.1]
+  Let $\sC$ be the closure system of fixed points of the closure operator $\cl: \sP(X) \to \sP(X)$.
+  The following are equivalent:
+\begin{enumerate}
+\item $\cl$ is an algebraic closure operator
+\item $\sC$ is an algebraic closure system
+\item If $D\subseteq \sC$ is up-directed and $C\subseteq D$ is a chain, then $\bigcup C$ is closed.
+\item If $D\subseteq \sC$ is up-directed, then $\bigcup D$ is closed.
+\item If $C\subseteq \sC$ is a chain, then $\bigcup C$ is closed.
+\end{enumerate}
+\end{theorem}
 
 
 
