--- a/par-alg-rep/inputs/macros.sty
+++ b/par-alg-rep/inputs/macros.sty
@@ -43,6 +43,7 @@
 \newcommand{\Op}{\ensuremath{\operatorname{Op}}}
 \newcommand{\alg}[1]{\ensuremath{\mathbf{#1}}}
 \newcommand{\Sub}{\ensuremath{\operatorname{Sub}}}
+\newcommand{\Sg}{\ensuremath{\operatorname{Sg}}}
 \newcommand{\Con}{\ensuremath{\operatorname{Con}}}
 \newcommand{\Cg}{\ensuremath{\operatorname{Cg}}}
 \newcommand{\Clo}{\ensuremath{\operatorname{\mathsf{Clo}}}}
