--- a/par-alg-rep/inputs/macros.sty
+++ b/par-alg-rep/inputs/macros.sty
@@ -45,6 +45,8 @@
 \newcommand{\Sub}{\ensuremath{\operatorname{Sub}}}
 \newcommand{\Sg}{\ensuremath{\operatorname{Sg}}}
 \newcommand{\Con}{\ensuremath{\operatorname{Con}}}
+\newcommand{\SCon}{\ensuremath{\operatorname{SCon}}}
+\newcommand{\WCon}{\ensuremath{\operatorname{WCon}}}
 \newcommand{\Cg}{\ensuremath{\operatorname{Cg}}}
 \newcommand{\Clo}{\ensuremath{\operatorname{\mathsf{Clo}}}}
 \newcommand{\typ}{\ensuremath{\operatorname{typ}}}
@@ -76,6 +78,7 @@
 \newcommand{\sansS}{\ensuremath{\mathsf{S}}}
 \newcommand{\sansT}{\ensuremath{\mathsf{T}}}
 \newcommand{\bA}{\ensuremath{\mathbf{A}}}
+\newcommand{\A}{\ensuremath{\mathbb{A}}}
 \newcommand{\bL}{\ensuremath{\mathbf{L}}}
 \newcommand{\sL}{\ensuremath{\mathcal{L}}}
 \newcommand{\bQ}{\ensuremath{\mathbf{Q}}}
